[tool.poetry]
name = "dfusim"
version = "0.1.0"
description = "Besta DFU Protocol Simulator"
authors = ["dogtopus <dogtopus@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
functionfs = "^0.9.2"
setuptools = "^72.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dfusim = 'dfusim.cli:main'
